|Ramu| Fix report alignment

--- a/assets/css/record.css
+++ b/assets/css/record.css
@@ -471,7 +471,12 @@ audio {
   border: 1px solid #959595;
   color: #959595;
   margin-right: 1rem;
-  width: 107px;
+  min-width: 107px;
+}
+
+#report_btn svg {
+  margin-right: 5px;
+  margin-top: -2px;
 }
 
 #report_close_btn, #report_sentence_thanks_close_id {
@@ -567,7 +572,7 @@ audio {
   right: 1rem;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   #content-wrapper {
     padding: 0;
   }
@@ -677,6 +682,11 @@ audio {
   }
   .noise-container {
     text-align: center;
+  }
+
+  .xs-radio-label {
+    margin-top: 2px;
+    margin-left: 2px;
   }
 }
 
